navbar link to main page

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -13,7 +13,9 @@
 
     <nav class="navbar">
         <div class="navbar-left">
-            <img src="../static/images/eco-logo.png" alt="Logo" class="logo">
+            <a href="{% url 'index' %}">
+                <img src="../static/images/eco-logo.png" alt="Logo" class="logo">
+            </a>
         </div>
         <div class="navbar-center">
             <div class="search-container">
