--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -11,10 +11,11 @@
     <div class="green-block">
         Бесплатная доставка при покупке товаров от 20 тыс тенге
     </div>
-
     <nav class="navbar">
         <div class="navbar-left">
-            <img src="../static/images/eco-logo.png" alt="Logo" class="logo">
+            <a href="{% url 'index' %}">
+                <img src="../static/images/eco-logo.png" alt="Logo" class="logo">
+            </a>
         </div>
         <div class="navbar-center">
             <div class="search-container">
@@ -24,7 +25,7 @@
         </div>
         <div class="navbar-right">
             {% if user.is_authenticated %}
-                <p>{{ user.username }}</p>
+                <a href="{% url 'profile' %}">{{ user.username }}</a>
                 <a href="auth/logout"><img src="../static/images/logout-icon.png" width="30" alt="Logout" class="icon"></a>
             {% else %}
                 <p>Авторизоваться</p>
@@ -37,7 +38,7 @@
     <div class="navigation">
         <ul>
             <li><a href="#">Новинки!</a></li>
-            <li><a href="#">Одежда</a></li>
+            <li><a href="/products/1">Одежда</a></li>
             <li><a href="#">Банные</a></li>
             <li><a href="#">Постельные</a></li>
             <li><a href="#">Для Дома</a></li>
@@ -45,7 +46,7 @@
             <li><a href="#">Обувь</a></li>
             <li><a href="#">Аксессуары</a></li>
         </ul>
-    </div> 
+    </div>
 
     <!-- Product Section -->
     <div class="product-container">
