--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -54,7 +54,8 @@
         <div class="product" onmouseover="animateProduct(this)" onmouseout="resetProduct(this)">
             <a href="#">
                 {% if product.image_link %}
-                    <img src="{{ product.image_link }}" alt="{{ product.name }}">
+                    <div style="width: 300px; height: 300px; background-image: url('../../product_images/{{ product.image_link }}'); background-size: contain; background-position: center; background-repeat: no-repeat;"></div>
+                    {% comment %} <img src="../../product_images/{{ product.image_link }}" alt="{{ product.name }}" width="300" height="300"> {% endcomment %}
                 {% else %}
                     <img src="../static/images/default-product.jpg" width="300" alt="{{ product.name }}">
                 {% endif %}
