--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -224,6 +224,40 @@
       </div>
     </div>
   </div>
+
+
+  <footer class="bg-dark text-light py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5>О нас</h5>
+          <p>Магазин экологически полезных товаров.</p>
+        </div>
+        <div class="col-md-6">
+          <h5>Контактная информация</h5>
+          <ul class="list-unstyled">
+            <li>Email: ecoshop@gmail.com</li>
+            <li>Phone: +7-777-777-77-77</li>
+            <li>Address: Mangilik El 51, Astana, Kazakhstan</li>
+          </ul>
+        </div>
+      </div>
+      <hr class="my-4">
+      <div class="row">
+        <div class="col-md-6">
+          <p>&copy; 2024 Your Company. All rights reserved.</p>
+        </div>
+        <div class="col-md-6">
+          <ul class="list-inline text-md-end">
+            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            <li class="list-inline-item"><a href="#">Terms of Use</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
     <script type="text/javascript">
         (function(d, m){
             var kommunicateSettings = 
