--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -167,7 +167,7 @@
     </div>
   </section>
 
-  <div class="container-fluid px-5 my-5">
+  <div class="container-fluid px-5 my-5" id="contact">
     <div class="row justify-content-center">
       <div class="col-xl-10">
         <div class="card border-0 rounded-3 shadow-lg overflow-hidden">
@@ -183,22 +183,22 @@
                 <!-- Contact Form Content -->
   
                 <div class="text-center">
-                  <div class="h3 fw-light">Contact Form</div>
-                  <p class="mb-4 text-muted">Split layout contact form</p>
+                  <div class="h3 fw-light">Сообщите нам</div>
+                  <p class="mb-4 text-muted"></p>
                 </div>
   
                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                   <!-- Name Input -->
                   <div class="form-floating mb-3">
                     <input class="form-control" id="name" type="text" placeholder="Name" data-sb-validations="required" />
-                    <label for="name">Name</label>
-                    <div class="invalid-feedback" data-sb-feedback="name:required">Name is required.</div>
+                    <label for="name">Имя</label>
+                    <div class="invalid-feedback" data-sb-feedback="name:required">Напишите имя.</div>
                   </div>
   
                   <!-- Email Input -->
                   <div class="form-floating mb-3">
                     <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                    <label for="emailAddress">Email Address</label>
+                    <label for="emailAddress">Почта</label>
                     <div class="invalid-feedback" data-sb-feedback="emailAddress:required">Email Address is required.</div>
                     <div class="invalid-feedback" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
                   </div>
@@ -206,13 +206,13 @@
                   <!-- Message Input -->
                   <div class="form-floating mb-3">
                     <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;" data-sb-validations="required"></textarea>
-                    <label for="message">Message</label>
-                    <div class="invalid-feedback" data-sb-feedback="message:required">Message is required.</div>
+                    <label for="message">Сообщение</label>
+                    <div class="invalid-feedback" data-sb-feedback="message:required">Отправьте сообщение.</div>
                   </div>
   
                   <!-- Submit button -->
                   <div class="d-grid">
-                    <button class="btn btn-success btn-lg" id="submitButton" type="submit">Submit</button>
+                    <button class="btn btn-success btn-lg" id="submitButton" type="submit">Отправить</button>
                   </div>
                 </form>
                 <!-- End of contact form -->
