--- a/core/static/style/product.css
+++ b/core/static/style/product.css
@@ -4,6 +4,7 @@ body, html {
     height: 100%;
     font-family: Arial, sans-serif;
 }
+
 .green-block {
     background-color: #658C4A;
     color: white;
@@ -82,9 +83,11 @@ body, html {
     transform: translateY(-50%);
     cursor: pointer;
 }
+
 .navbar-left, .navbar-right {
     padding: 0 30px; /* Add padding to both left and right sides */
 }
+
 .product-container {
     display: flex;
     flex-wrap: wrap;
@@ -106,4 +109,40 @@ body, html {
 
 .product-name{
     font-weight: bold;
+}
+
+/* single_product.css */
+.single-product{
+    width: 40%;
+}
+.single-product-container {
+    display: flex;
+    width: 70%;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+    padding: 20px; /* Add padding for spacing */
+}
+
+.product-image {
+    flex: 1; /* Let the image take 1/3 of the container */
+    margin-right: 20px; /* Add some space between image and details */
+}
+
+.product-details {
+    flex: 2; /* Let the details take 2/3 of the container */
+}
+
+.product-details h2 {
+    font-size: 24px;
+    margin: 0 0 10px 0;
+}
+
+.product-details p {
+    margin: 5px 0;
+}
+
+.product-price {
+    font-weight: bold;
+    color: #007bff;
 }
