--- a/core/static/style/addproduct.css
+++ b/core/static/style/addproduct.css
@@ -2,25 +2,25 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: white;
 }
 .green-block {
-background-color: #658C4A;
-color: white;
-width: 100%;
-height: 7%;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 1.0em;
+    background-color: #658C4A;
+    color: white;
+    width: 100%;
+    height: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.0em;
 }
 
 .navbar {
-background-color: #f4f4f4;
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
 .navbar-left, .navbar-center, .navbar-right {
@@ -100,7 +100,7 @@ label {
     display: block;
     margin-bottom: 5px;
 }
-input[type="text"], textarea {
+.form-group input[type="text"], textarea {
     width: 100%;
     padding: 8px;
     border-radius: 4px;
